--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>RAS Jadara - Robotics and Automation Society</title>
     <meta name="description" content="RAS Jadara - Where innovation meets robotics. Join us in exploring the future of robotics and automation technology.">
-    <link rel="stylesheet" href="indix.css">
+    <link rel="stylesheet" href="index.css">
 </head>
 <body>
     <!-- Navigation -->
@@ -13,13 +13,7 @@
         <div class="container">
             <div class="nav-content">
                 <div class="logo-container">
-                    <div class="logo-placeholder">
-                        <svg viewBox="0 0 50 50" fill="none" xmlns="http://www.w3.org/2000/svg">
-                            <circle cx="25" cy="25" r="20" stroke="currentColor" stroke-width="2"/>
-                            <path d="M25 10 L25 40 M10 25 L40 25" stroke="currentColor" stroke-width="2"/>
-                            <circle cx="25" cy="25" r="5" fill="currentColor"/>
-                        </svg>
-                    </div>
+                   </div>
                     <span class="logo-text">RAS Jadara</span>
                 </div>
                 
@@ -347,4 +341,5 @@
 
     <script src="index.js"></script>
 </body>
+
 </html>
