--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>RAS Jadara - Robotics and Automation Society</title>
     <meta name="description" content="RAS Jadara - Where innovation meets robotics. Join us in exploring the future of robotics and automation technology.">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="index.css">
 </head>
 <body>
     <!-- Navigation -->
@@ -372,6 +372,7 @@
         </div>
     </div>
 
-    <script src="script.js"></script>
+    <script src="index.js"></script>
 </body>
 </html>
+
