--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
                 <div class="team-level level-3">
                     <div class="team-card fade-in-element">
                         <div class="team-image">
-                            <img src="https://i.postimg.cc/fRF377Nc/IMG-6524.avif" alt="Media Team Leader">
+                            <img src="https://i.postimg.cc/MHD291kJ/bbbb.jpg" alt="Media Team Leader">
                             <div class="team-overlay">
                                 <div class="team-social">
                                     <a href="https://www.linkedin.com/in/baraa-alzoubi-65746a37b?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=ios_app" aria-label="LinkedIn" target="_blank"><svg viewBox="0 0 24 24" fill="currentColor"><path d="M20.447 20.452h-3.554v-5.569c0-1.328-.027-3.037-1.852-3.037-1.853 0-2.136 1.445-2.136 2.939v5.667H9.351V9h3.414v1.561h.046c.477-.9 1.637-1.85 3.37-1.85 3.601 0 4.267 2.37 4.267 5.455v6.286zM5.337 7.433c-1.144 0-2.063-.926-2.063-2.065 0-1.138.92-2.063 2.063-2.063 1.14 0 2.064.925 2.064 2.063 0 1.139-.925 2.065-2.064 2.065zm1.782 13.019H3.555V9h3.564v11.452zM22.225 0H1.771C.792 0 0 .774 0 1.729v20.542C0 23.227.792 24 1.771 24h20.451C23.2 24 24 23.227 24 22.271V1.729C24 .774 23.2 0 22.222 0h.003z"/></svg></a>
@@ -298,10 +298,6 @@
             <div class="contact-content">
                 <div class="contact-info">
                     <div class="contact-item fade-in-element">
-                        <div class="contact-icon">📧</div>
-                        <h3>Email</h3>
-                        <p>info@rasjadara.com</p>
-                    </div>
                     <div class="contact-item fade-in-element">
                         <div class="contact-icon">📱</div>
                         <h3>Social Media</h3>
@@ -324,20 +320,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="contact-form-container fade-in-element">
-                    <form class="contact-form" id="contactForm">
-                        <div class="form-group">
-                            <input type="text" placeholder="Your Name" required>
-                        </div>
-                        <div class="form-group">
-                            <input type="email" placeholder="Your Email" required>
-                        </div>
-                        <div class="form-group">
-                            <textarea placeholder="Your Message" rows="5" required></textarea>
-                        </div>
-                        <button type="submit" class="btn btn-primary btn-full">Send Message</button>
-                    </form>
-                </div>
+            
             </div>
         </div>
     </section>
@@ -375,4 +358,5 @@
     <script src="index.js"></script>
 </body>
 </html>
+
 
